--- a/blog.html
+++ b/blog.html
@@ -31,25 +31,23 @@
         <div class="container-lg p-0">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 text-white display-4"><span class="text-primary">D</span>ot<span class="text-primary">C</span>om</h1>
+                    <h1 class="m-0 text-white display-4"><span class="text-primary">Yawar</span>Ayllu<span class="text-primary"></span></h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Services</a>
-                        <a href="pricing.html" class="nav-item nav-link">Pricing</a>
+                        <a href="index.html" class="nav-item nav-link">INICIO</a>
+                        <a href="about.html" class="nav-item nav-link">NOSOTROS</a>
+                        <a href="service.html" class="nav-item nav-link">COMENTARIOS</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">ARTICULOS</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item active">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">Blog Detail</a>
+                                <a href="blog.html" class="dropdown-item active">GENERAL</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link">CONTACTANOS</a>
                     </div>
                 </div>
             </nav>
@@ -62,9 +60,9 @@
     <div class="container-fluid page-header d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5 mb-5">
         <h1 class="display-4 text-white mb-3 mt-0 mt-lg-5">Blog</h1>
         <div class="d-inline-flex text-white">
-            <p class="m-0"><a class="text-white" href="">Home</a></p>
-            <p class="m-0 px-2">/</p>
-            <p class="m-0">Blog</p>
+            <p class="m-0"><a class="text-white" href="">Yawar</a></p>
+            <p class="m-0 px-2"> Ayllu</p>
+            <p class="m-0"></p>
         </div>
     </div>
     <!-- Page Header Start -->
@@ -169,105 +167,42 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <nav aria-label="Page navigation">
-                          <ul class="pagination pagination-lg justify-content-center mb-0">
-                            <li class="page-item disabled">
-                              <a class="page-link" href="#" aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                                <span class="sr-only">Previous</span>
-                              </a>
-                            </li>
-                            <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item">
-                              <a class="page-link" href="#" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                                <span class="sr-only">Next</span>
-                              </a>
-                            </li>
-                          </ul>
-                        </nav>
-                    </div>
-                </div>
             </div>
             <!-- Blog Grid End -->
 
             <!-- Sidebar Start -->
             <div class="col-lg-4 mt-5 mt-lg-0">
                 <!-- Search Form Start -->
-                <div class="mb-5">
-                    <form action="">
-                        <div class="input-group">
-                            <input type="text" class="form-control form-control-lg" placeholder="Keyword">
-                            <div class="input-group-append">
-                                <span class="input-group-text bg-transparent text-primary"><i
-                                        class="fa fa-search"></i></span>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <!-- Search Form End -->
-
-                <!-- Category Start -->
-                <div class="mb-5">
-                    <h3 class="font-weight-bold mb-4">Categories</h3>
-                    <ul class="list-group">
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a class="font-weight-semi-bold text-decoration-none" href="#"><i class="fa fa-angle-right mr-2"></i>Web Design</a>
-                            <span class="badge badge-primary badge-pill">150</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a class="font-weight-semi-bold text-decoration-none" href="#"><i class="fa fa-angle-right mr-2"></i>Web Development</a>
-                            <span class="badge badge-primary badge-pill">131</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a class="font-weight-semi-bold text-decoration-none" href="#"><i class="fa fa-angle-right mr-2"></i>Online Marketing</a>
-                            <span class="badge badge-primary badge-pill">78</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a class="font-weight-semi-bold text-decoration-none" href="#"><i class="fa fa-angle-right mr-2"></i>Keyword Research</a>
-                            <span class="badge badge-primary badge-pill">56</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a class="font-weight-semi-bold text-decoration-none" href="#"><i class="fa fa-angle-right mr-2"></i>Email Marketing</a>
-                            <span class="badge badge-primary badge-pill">98</span>
-                        </li>
-                    </ul>
-                </div>
-                <!-- Category End -->
-
+              
                 <!-- Recent Post Start -->
                 <div class="mb-5">
-                    <h3 class="font-weight-bold mb-4">Recent Post</h3>
+                    <h3 class="font-weight-bold mb-4">Publicaciones recientes</h3>
                     <div class="d-flex mb-3">
-                        <img class="img-fluid" src="img/blog-1.jpg" style="width: 80px; height: 80px;" alt="">
+                        <img class="img-fluid" src="img/LOGO CUADRADO YAW.png" style="width: 80px; height: 80px;" alt="">
                         <div class="d-flex align-items-center border border-left-0 px-3" style="height: 80px;">
                             <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
                         </div>
                     </div>
                     <div class="d-flex mb-3">
-                        <img class="img-fluid" src="img/blog-2.jpg" style="width: 80px; height: 80px;" alt="">
+                        <img class="img-fluid" src="img/LOGO CUADRADO YAW.png" style="width: 80px; height: 80px;" alt="">
                         <div class="d-flex align-items-center border border-left-0 px-3" style="height: 80px;">
                             <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
                         </div>
                     </div>
                     <div class="d-flex mb-3">
-                        <img class="img-fluid" src="img/blog-1.jpg" style="width: 80px; height: 80px;" alt="">
+                        <img class="img-fluid" src="img/LOGO CUADRADO YAW.png" style="width: 80px; height: 80px;" alt="">
                         <div class="d-flex align-items-center border border-left-0 px-3" style="height: 80px;">
                             <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
                         </div>
                     </div>
                     <div class="d-flex mb-3">
-                        <img class="img-fluid" src="img/blog-2.jpg" style="width: 80px; height: 80px;" alt="">
+                        <img class="img-fluid" src="img/LOGO CUADRADO YAW.png" style="width: 80px; height: 80px;" alt="">
                         <div class="d-flex align-items-center border border-left-0 px-3" style="height: 80px;">
                             <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
                         </div>
                     </div>
                     <div class="d-flex mb-3">
-                        <img class="img-fluid" src="img/blog-1.jpg" style="width: 80px; height: 80px;" alt="">
+                        <img class="img-fluid" src="img/LOGO CUADRADO YAW.png" style="width: 80px; height: 80px;" alt="">
                         <div class="d-flex align-items-center border border-left-0 px-3" style="height: 80px;">
                             <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
                         </div>
@@ -277,33 +212,33 @@
 
                 <!-- Image Start -->
                 <div class="border p-3 mb-5">
-                    <img src="img/blog-1.jpg" alt="" class="img-fluid">
+                    <img src="img/carousel-1.jpg" alt="" class="img-fluid">
                 </div>
                 <!-- Image End -->
 
                 <!-- Tags Start -->
                 <div class="mb-5">
-                    <h3 class="font-weight-bold mb-4">Tag Cloud</h3>
+                    <h3 class="font-weight-bold mb-4">Palabras claves</h3>
                     <div class="d-flex flex-wrap m-n1">
-                        <a href="" class="btn btn-outline-primary m-1">Design</a>
-                        <a href="" class="btn btn-outline-primary m-1">Development</a>
-                        <a href="" class="btn btn-outline-primary m-1">Marketing</a>
-                        <a href="" class="btn btn-outline-primary m-1">SEO</a>
-                        <a href="" class="btn btn-outline-primary m-1">Writing</a>
-                        <a href="" class="btn btn-outline-primary m-1">Consulting</a>
+                        <a class="btn btn-outline-primary m-1">Design</a>
+                        <a class="btn btn-outline-primary m-1">Development</a>
+                        <a class="btn btn-outline-primary m-1">Marketing</a>
+                        <a class="btn btn-outline-primary m-1">SEO</a>
+                        <a class="btn btn-outline-primary m-1">Writing</a>
+                        <a class="btn btn-outline-primary m-1">Consulting</a>
                     </div>
                 </div>
                 <!-- Tags End -->
 
                 <!-- Image Start -->
                 <div class="border p-3 mb-5">
-                    <img src="img/blog-2.jpg" alt="" class="img-fluid">
+                    <img src="img/carousel-2.jpg" alt="" class="img-fluid">
                 </div>
                 <!-- Image End -->
 
                 <!-- Plain Text Start -->
                 <div>
-                    <h3 class="font-weight-bold mb-4">Plain Text</h3>
+                    <h3 class="font-weight-bold mb-4">Área de investigación</h3>
                     <div class="border p-3">
                         Aliquyam sed lorem stet diam dolor sed ut sit. Ut sanctus erat ea est aliquyam dolor et. Et no consetetur eos labore ea erat voluptua et. Et aliquyam dolore sed erat. Magna sanctus sed eos tempor rebum dolor, tempor clita sit et elitr eirmod.
                     </div>
@@ -321,49 +256,41 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 mt-n2 text-white display-4"><span class="text-primary">D</span>ot<span class="text-primary">C</span>om</h1>
+                    <h1 class="m-0 mt-n2 text-white display-4"><span class="text-primary">Y</span>aw<span class="text-primary"></span></h1>
                 </a>
-                <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
-                <div class="d-flex justify-content-start mt-4">
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
-                </div>
+                <p>Organización juvenil sin fines de lucro que promueve la diversidad y la preservación de tradiciones para fortalecer el orgullo por nuestras raíces en jóvenes y el público en general.</p>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="font-weight-bold text-primary mb-4">Quick Links</h5>
+                <h5 class="font-weight-bold text-primary mb-4">FORMULARIOS</h5>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Services</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Pricing</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="https://docs.google.com/forms/d/e/1FAIpQLSdSwESW-Xt0UFP7EiR-a9i7Ps6Qo7ovwc_W7YgEiWevde_QPw/viewform?usp=sf_link" ><i class="fa fa-angle-right text-primary mr-2"></i>SÉ PARTE DE NOSOTROS</a>
+                    <a class="text-white mb-2" href="https://forms.gle/raPwAhKkQpQFVMnBA"><i class="fa fa-angle-right text-primary mr-2"></i>TALLER ACERCA DEL SUICIDIO Y PREVENCIÓN </a>
+
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="font-weight-bold text-primary mb-4">Popular Links</h5>
+                <h5 class="font-weight-bold text-primary mb-4">NUESTRAS REDES</h5>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Services</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Pricing</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right text-primary mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="https://instagram.com/yaw.pe?igshid=NjIwNzIyMDk2Mg=="><i class="fa fa-angle-right text-primary mr-2"></i>INSTAGRAM</a>
+                    <a class="text-white mb-2" href="https://www.threads.net/@yaw.pe"><i class="fa fa-angle-right text-primary mr-2"></i>THREADS</a>
+                    <a class="text-white mb-2" href="https://www.tiktok.com/@yaw.pe"><i class="fa fa-angle-right text-primary mr-2"></i>TIKTOK</a>
+                    <a class="text-white mb-2" href="https://beacons.ai/yawarayllu?fbclid=PAAaZJTN8qBzVwkllL8dKziM0c5r5MJMr17e97gynkjw7DYdAzzLaD60fQUOA"><i class="fa fa-angle-right text-primary mr-2"></i>BEACONS</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="font-weight-bold text-primary mb-4">Get In Touch</h5>
-                <p>Dolor clita stet nonumy clita diam vero, et et ipsum diam labore</p>
-                <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>123 Street, New York, USA</p>
-                <p><i class="fa fa-phone-alt text-primary mr-2"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope text-primary mr-2"></i>info@example.com</p>
+                <h5 class="font-weight-bold text-primary mb-4">CONTÁCTANOS</h5>
+                <p>Nos puedes contactar por los siguientes medios</p>
+                <p><i class="fa fa-map-marker-alt text-primary mr-2"></i>Estamos por todo el mundo      </p>
+                <p><i class="fa fa-phone-alt text-primary mr-2"></i>+51 979 633 553</p>
+                <p><i class="fa fa-envelope text-primary mr-2"></i>yawarayllu6@gmail.com           </p>
             </div>
         </div>
-    </div>
+    </div> 
+
     <div class="container-fluid py-4 px-sm-3 px-md-5">
         <p class="m-0 text-center">
-            &copy; <a class="font-weight-semi-bold" href="#">Your Site Name</a>. All Rights Reserved. Designed by
-            <a class="font-weight-semi-bold" href="https://htmlcodex.com">HTML Codex</a>
+            &copy; <a class="font-weight-semi-bold" href="https://dimistudios.github.io/DIMI-STUDIOS/">DIANA MICHELLE BARRANTES GALLARDO</a>. Development by
+            <a class="font-weight-semi-bold" href="https://dimistudios.github.io/DIMI-STUDIOS/">DIMI-STUDIOS</a>
         </p>
     </div>
     <!-- Footer End -->
