--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>YAW</title>
+    <title>YAW - INICIO</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="YAWAR AYLLU" name="keywords">
     <meta content="YAWAR AYLLU" name="description">
@@ -44,8 +44,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">ARTICULOS</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="#" class="dropdown-item">GENERAL</a>
-                                <a href="#" class="dropdown-item">DETALLE</a>
+                                <a href="blog.html" class="dropdown-item">GENERAL</a>
                             </div>
                         </div>
                         <a href="#" class="nav-item nav-link">CONTACTANOS</a>
