--- a/blog.html
+++ b/blog.html
@@ -220,12 +220,11 @@
                 <div class="mb-5">
                     <h3 class="font-weight-bold mb-4">Palabras claves</h3>
                     <div class="d-flex flex-wrap m-n1">
-                        <a class="btn btn-outline-primary m-1">Design</a>
-                        <a class="btn btn-outline-primary m-1">Development</a>
-                        <a class="btn btn-outline-primary m-1">Marketing</a>
-                        <a class="btn btn-outline-primary m-1">SEO</a>
-                        <a class="btn btn-outline-primary m-1">Writing</a>
-                        <a class="btn btn-outline-primary m-1">Consulting</a>
+                        <a class="btn btn-outline-primary m-1">InvestigaciónYaw</a>
+                        <a class="btn btn-outline-primary m-1">Cultura</a>
+                        <a class="btn btn-outline-primary m-1">ConocimientoQueTransforma</a>
+                        <a class="btn btn-outline-primary m-1">JuventudConPropósito</a>
+                        <a class="btn btn-outline-primary m-1">DescubreConYaw</a>
                     </div>
                 </div>
                 <!-- Tags End -->
@@ -240,7 +239,7 @@
                 <div>
                     <h3 class="font-weight-bold mb-4">Área de investigación</h3>
                     <div class="border p-3">
-                        Aliquyam sed lorem stet diam dolor sed ut sit. Ut sanctus erat ea est aliquyam dolor et. Et no consetetur eos labore ea erat voluptua et. Et aliquyam dolore sed erat. Magna sanctus sed eos tempor rebum dolor, tempor clita sit et elitr eirmod.
+                        ¡Bienvenidos al fascinante viaje del Área de Investigación de Yaw! Aquí, fusionamos conocimiento y creatividad para dejar una huella duradera en nuestras comunidades. Les invito a explorar nuestra visión y descubrir cómo contribuimos al florecimiento de la organización. Nuestra misión es sumergirnos en temas como la diversidad cultural, tradiciones locales y lenguas indígenas. Buscamos generar sabiduría y recursos educativos que inspiren el respeto, la valoración y la promoción de estas esencias culturales.
                     </div>
                 </div>
                 <!-- Plain Text End -->
