--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                         <div class="d-flex mb-3">
                             <div class="d-flex align-items-center">
                                 <img class="rounded-circle" style="width: 40px; height: 40px;" src="img/LOGO REDONDO YAW .png" alt="">
-                                <a class="text-muted ml-2" href="">YAW Y TANTAYy</a>
+                                <a class="text-muted ml-2" href="">YAW Y TANTAY</a>
                             </div>
                             <div class="d-flex align-items-center ml-4">
                                 <i class="far fa-bookmark text-primary"></i>
