--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
                 <div class="col-lg-7 mt-5 mt-lg-0">
                     <small class="bg-primary text-white text-uppercase font-weight-bold px-1">¿QUIÉNES SOMOS?</small>
                     <h1 class="mt-2 mb-4">YAWAR AYLLU</h1>
-                    <p class="mb-4">Somos una organización juvenil sin fines de lucro con la finalidad de dar a conocer a los y las adolescentes/ jóvenes y público general la diversidad de nuestro país tanto lingüística, étnica y culturalmente como la conservación de tradiciones, promoviendo el orgullo de nuestras raíces.</p>
+                    <p class="mb-4">Somos una organización juvenil sin fines de lucro con la finalidad de EMPODERAR a las mentes jóvenes a ROMPER con la estigmatización, diferencias y brechas culturales del país, para la conservación y valoración de la diversidad cultural.</p>
+                    <small class="bg-primary text-white text-uppercase font-weight-bold px-1">VISIÓN</small>
+                    <p class="mb-4">Antes del pase de una GENERACIÓN, 6 de cada 10 adolescentes tendrán una nueva mentalidad abierta hacia la diversidad cultural.</p>
                     <a href="https://beacons.ai/yawarayllu?fbclid=PAAaZJTN8qBzVwkllL8dKziM0c5r5MJMr17e97gynkjw7DYdAzzLaD60fQUOA" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">CONÓCENOS</a>
                 </div>
             </div>
@@ -186,7 +188,7 @@
                         </div>
                         <div class="col-sm-6 pb-1">
                             <div class="d-flex flex-column align-items-center border px-4 mb-4">
-                                <h2 class="display-3 text-primary mb-3" data-toggle="counter-up">937</h2>
+                                <h2 class="display-3 text-primary mb-3" data-toggle="counter-up">1132</h2>
                                 <h5 class="font-weight-bold mb-4">Impactados</h5>
                             </div>
                         </div>
@@ -221,7 +223,7 @@
                             </div>
                             <div class="border border-top-0 text-center" style="padding: 30px;">
                                 <h5 class="font-weight-bold">Ariana Narrea</h5>
-                                <span>Directora general</span>
+                                <span>Fundadora y directora general</span>
                             </div>
                         </div>
                         <div class="team-item">
@@ -423,25 +425,25 @@
                 </div>
                 <div class="col-md-6 mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid w-100" src="img/LOGO CUADRADO YAW.png" alt="">
+                        <img class="img-fluid w-100" src="img/TALLER_LIDER.jpg" alt="">
                         <div class="position-absolute bg-primary d-flex flex-column align-items-center justify-content-center"
                             style="width: 80px; height: 80px; bottom: 0; left: 0;">
-                            <h6 class="text-uppercase mt-2 mb-n2">Sep</h6>
-                            <h1 class="m-0">30</h1>
+                            <h6 class="text-uppercase mt-2 mb-n2">Oct</h6>
+                            <h1 class="m-0">14</h1>
                         </div>
                     </div>
                     <div class="border border-top-0" style="padding: 30px;">
                         <div class="d-flex mb-3">
                             <div class="d-flex align-items-center">
                                 <img class="rounded-circle" style="width: 40px; height: 40px;" src="img/LOGO REDONDO YAW .png" alt="">
-                                <a class="text-muted ml-2" href="">YAW Y TANTAY</a>
+                                <a class="text-muted ml-2" href="">YAW Y GENLI</a>
                             </div>
                             <div class="d-flex align-items-center ml-4">
                                 <i class="far fa-bookmark text-primary"></i>
                                 <a class="text-muted ml-2" href="">TALLER</a>
                             </div>
                         </div>
-                        <a class="h5 font-weight-bold" href="https://forms.gle/raPwAhKkQpQFVMnBA">Completa el formulario y únete a nuestro taller junto con Tantay acerca del suicidio y cómo prevenirlo</a>
+                        <a class="h5 font-weight-bold" href="https://docs.google.com/forms/d/e/1FAIpQLSc7uqx-I0oFHQWujNlgYA-wP7lIDzr2_2aPmpAhWfOa3sV3NQ/viewform?usp=sf_linkhttps://docs.google.com/forms/d/e/1FAIpQLSc7uqx-I0oFHQWujNlgYA-wP7lIDzr2_2aPmpAhWfOa3sV3NQ/viewform?usp=sf_link">Completa el formulario y únete a nuestro taller junto con Genli - ¿Cómo ser un lider? ¡Yo soy un lider!</a>
                     </div>
                 </div>
                 
@@ -464,7 +466,7 @@
                 <h5 class="font-weight-bold text-primary mb-4">FORMULARIOS</h5>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="https://docs.google.com/forms/d/e/1FAIpQLSdSwESW-Xt0UFP7EiR-a9i7Ps6Qo7ovwc_W7YgEiWevde_QPw/viewform?usp=sf_link" ><i class="fa fa-angle-right text-primary mr-2"></i>SÉ PARTE DE NOSOTROS</a>
-                    <a class="text-white mb-2" href="https://forms.gle/raPwAhKkQpQFVMnBA"><i class="fa fa-angle-right text-primary mr-2"></i>TALLER ACERCA DEL SUICIDIO Y PREVENCIÓN </a>
+                    <a class="text-white mb-2" href="https://docs.google.com/forms/d/e/1FAIpQLSc7uqx-I0oFHQWujNlgYA-wP7lIDzr2_2aPmpAhWfOa3sV3NQ/viewform?usp=sf_linkhttps://docs.google.com/forms/d/e/1FAIpQLSc7uqx-I0oFHQWujNlgYA-wP7lIDzr2_2aPmpAhWfOa3sV3NQ/viewform?usp=sf_link"><i class="fa fa-angle-right text-primary mr-2"></i>TALLER ¿CÓMO SER UN LIDER? ¡YO SOY UN LIDER! </a>
 
                 </div>
             </div>
