--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">INICIO</a>
-                        <a href="#" class="nav-item nav-link">NOSOTROS</a>
+                        <a href="about.html" class="nav-item nav-link">NOSOTROS</a>
                         <a href="#" class="nav-item nav-link">COMENTARIOS</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">ARTICULOS</a>
@@ -302,6 +302,123 @@
         </div>
     </div>
     <!-- Team End -->
+
+    <!-- Ambassadors start -->
+    <div class="container-fluid pt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 mb-5">
+                    <small class="bg-primary text-white text-uppercase font-weight-bold px-1">EMBAJADORES</small>
+                    <h1 class="mt-2 mb-3">CONOCE A LOS EMBAJADORES DE YAW</h1>
+                    <h4 class="font-weight-normal text-muted mb-4">En Yaw, estamos comprometidos con la excelencia, la innovación y la visión de un futuro mejor. Somos un equipo apasionado y dedicado que trabaja incansablemente para lograr nuestros objetivos y cumplir nuestra misión.</h4>
+                </div>
+                <div class="col-lg-8 mb-5">
+                    <div class="owl-carousel team-carousel">
+                        <div class="team-item">
+                            <div class="position-relative">
+                                <img class="img-fluid w-100" src="img/EMILIA ESPINOZA.jpg" alt="">
+                                <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
+                                    <div class="d-flex align-items-center justify-content-start">
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="border border-top-0 text-center" style="padding: 30px;">
+                                <h5 class="font-weight-bold">Emilia Espinoza</h5>
+                                <span></span>
+                            </div>
+                        </div>
+                        <div class="team-item">
+                            <div class="position-relative">
+                                <img class="img-fluid w-100" src="img/LEEROY MEDINA.jpg" alt="">
+                                <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
+                                    <div class="d-flex align-items-center justify-content-start">
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="border border-top-0 text-center" style="padding: 30px;">
+                                <h5 class="font-weight-bold">Leeroy Medina</h5>
+                                <span></span>
+                            </div>
+                        </div>
+                        <div class="team-item">
+                            <div class="position-relative">
+                                <img class="img-fluid w-100" src="img/MELANNY MUDARRA.jpg" alt="">
+                                <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
+                                    <div class="d-flex align-items-center justify-content-start">
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="border border-top-0 text-center" style="padding: 30px;">
+                                <h5 class="font-weight-bold">Melanny Mudarra</h5>
+                                <span></span>
+                            </div>
+                        </div>
+                        <div class="team-item">
+                            <div class="position-relative">
+                                <img class="img-fluid w-100" src="img/DANNA CASANOVA.jpg" alt="">
+                                <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
+                                    <div class="d-flex align-items-center justify-content-start">
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="border border-top-0 text-center" style="padding: 30px;">
+                                <h5 class="font-weight-bold">Danna Casanova</h5>
+                                <span></span>
+                            </div>
+                        </div>
+                        <div class="team-item">
+                            <div class="position-relative">
+                                <img class="img-fluid w-100" src="img/ALEXANDER RIVERA.jpg" alt="">
+                                <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
+                                    <div class="d-flex align-items-center justify-content-start">
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="border border-top-0 text-center" style="padding: 30px;">
+                                <h5 class="font-weight-bold">Alexander Rivera</h5>
+                                <span></span>
+                            </div>
+                        </div>
+                        <div class="team-item">
+                            <div class="position-relative">
+                                <img class="img-fluid w-100" src="img/SHANTAL CABRERA.jpg" alt="">
+                                <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
+                                    <div class="d-flex align-items-center justify-content-start">
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="border border-top-0 text-center" style="padding: 30px;">
+                                <h5 class="font-weight-bold">Shantal Cabrera</h5>
+                                <span></span>
+                            </div>
+                        </div>
+                        <div class="team-item">
+                            <div class="position-relative">
+                                <img class="img-fluid w-100" src="img/DAFNE CORREA.jpg" alt="">
+                                <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
+                                    <div class="d-flex align-items-center justify-content-start">
+                                        <a class="btn btn-outline-secondary rounded-circle text-center px-0" style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="border border-top-0 text-center" style="padding: 30px;">
+                                <h5 class="font-weight-bold">Dafne Correa</h5>
+                                <span></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Ambassadors end -->
+
 
     <!-- Testimonial Start -->
     <div class="container-fluid pt-5">
